--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,7 @@ authors = ["Konstantin Stepanov <me@kstep.me>"]
 name = "websocket"
 path = "src/websocket/lib.rs"
 
-[dependencies.url]
-git = "https://github.com/servo/rust-url.git"
-
-[dependencies.openssl]
-git = "https://github.com/sfackler/rust-openssl.git"
-
-[dependencies.rust-crypto]
-git = "https://github.com/DaGenix/rust-crypto.git"
+[dependencies]
+url = "*"
+openssl = "*"
+rust-crypto = "*"
