--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "bare-websocket"
-version = "0.0.4"
+version = "0.0.5"
 authors = ["Konstantin Stepanov <me@kstep.me>"]
 description = "Simple client only WebSocket (RFC6455) implementation with low level protocol details exposed (if needed)"
 repository = "https://github.com/kstep/rust-websocket.git"
@@ -18,3 +18,4 @@ openssl = "*"
 rustc-serialize = "*"
 sha1-hasher = "*"
 bitflags = "*"
+rand = "*"
